# LPV_MPC_drone

./: .gitignore  README.md
arena_2025/: my_arena.world
arena_2025_desenho/: my_arena.world
drone_custom_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
drone_custom_control/drone_custom_control/: drone_activation.py  drone_go_forward.py
drone_custom_control/drone_custom_control/nodes/: drone_activation_node.py  lpv_mpc_drone_node.py
drone_custom_control/src/: drone_command_filter.cpp
install/: local_setup.sh  setup.sh
install/drone_custom_control/lib/drone_custom_control/: drone_activation_node  lpv_mpc_drone_node
install/drone_custom_control/share/drone_custom_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mrs_uav_gazebo_simulator/lib/mrs_uav_gazebo_simulator/: mrs_drone_spawner
install/mrs_uav_gazebo_simulator/share/mrs_uav_gazebo_simulator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mrs_uav_system/share/mrs_uav_system/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mrs_uav_system_full/share/mrs_uav_system_full/: local_setup.bash  local_setup.dsv  local_setup.sh  (+7 more)
log/: latest_build
mrs_uav_gazebo_simulator/config/mrs_uav_system/: f450.yaml
mrs_uav_gazebo_simulator/tmux/one_drone/: rviz.rviz  session.yml
mrs_uav_system/: README.md
mrs_uav_system/docker/: Dockerfile
mrs_uav_system/ros_packages/mrs_uav_system_full/: package.xml
(+240 files in other folders)
